projects/vb6parse/snapshots/syntax/library/functions/objects/createobject/createobject_with_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/functions/objects/createobject.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: obj
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: CreateObject
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Excel.Application\""
                - kind: Whitespace
                  text: " "
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
